# MCppServer

./: CMakeLists.txt  LICENSE  README.md  config.json
.github/workflows/: ci.yml
resources/: biomes.json  blocks.json  config.json  flatworld_presets.json  items.json  languages.json  registry_data.json
src/: main.cpp
src/commands/: CommandBuilder.cpp  CommandBuilder.h
src/core/: config.cpp  config.h  server.cpp  server.h  utils.cpp  utils.h
src/data/: crafting_recipes.cpp  crafting_recipes.h  data.cpp  data.h
src/encryption/: rsa_key.cpp  rsa_key.h
src/entities/: entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  entity_manager.cpp  entity_manager.h  equipment.cpp  equipment.h  inventory.cpp  inventory.h  item_entity.cpp  item_entity.h  player.cpp  player.h  slot_data.cpp  slot_data.h
src/enums/: enums.h
src/inventories/: crafting_inventory.cpp  crafting_inventory.h  crafting_table_inventory.cpp  crafting_table_inventory.h  external_inventory.h  inventory.cpp  inventory.h  player_inventory.cpp  player_inventory.h
src/networking/: client.cpp  client.h  clientbound_packets.cpp  clientbound_packets.h  fetch.cpp  fetch.h  network.cpp  network.h  packet_ids.h
src/registries/: biome.cpp  biome.h  damage_type.cpp  damage_type.h  dimension_type.cpp  dimension_type.h  painting_variant.cpp  painting_variant.h  registry_manager.cpp  registry_manager.h  wolf_variant.cpp  wolf_variant.h
src/server/: query_server.cpp  query_server.h  rcon_server.cpp  rcon_server.h
src/utils/: endian.h  le32toh.h  thread_pool.cpp  thread_pool.h  translation.cpp  translation.h
src/world/: block_states.cpp  block_states.h  boss_bar.cpp  boss_bar.h  chunk.cpp  chunk.h  flatworld.cpp  flatworld.h  region_file.cpp  region_file.h  weather.cpp  weather.h  world.cpp  world.h  world_border.cpp  world_border.h  world_time.cpp  world_time.h
